<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>dev.wassim-tahraoui</groupId>
	<artifactId>tx-net</artifactId>
	<version>1.0.0</version>

	<name>TXNet - TCP Sockets Wrapping Library</name>
	<description>
		This library provides a simple and efficient way to handle TCP socket connections in Java.
		It abstracts the complexities of socket programming, allowing developers to focus on building their applications.
		It includes features like connection management, data transmission, and error handling.
	</description>
	<url>https://github.com/wassim-tahraoui88/tx-net</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>wassim-tahraoui88</id>
			<name>Wassim Tahraoui</name>
			<email>wassim.tahraoui88@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/wassim-tahraoui88/tx-net</url>
		<connection>scm:git:https://github.com/wassim-tahraoui88/tx-net.git</connection>
		<developerConnection>scm:git:https://github.com/wassim-tahraoui88/tx-net.git</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>dev.wassim-tahraoui</groupId>
            <artifactId>tx-core</artifactId>
            <version>1.0.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.13.0</version>
		        <configuration>
			        <source>23</source>
			        <target>23</target>
			        <compilerArgs>--enable-preview</compilerArgs>
		        </configuration>
	        </plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <version>3.3.0</version>
		        <executions>
			        <execution>
				        <id>attach-sources</id>
				        <goals>
					        <goal>jar</goal>
				        </goals>
			        </execution>
		        </executions>
	        </plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-javadoc-plugin</artifactId>
		        <version>3.6.0</version>
		        <executions>
			        <execution>
				        <id>attach-javadocs</id>
				        <goals>
					        <goal>jar</goal>
				        </goals>
			        </execution>
		        </executions>
	        </plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-gpg-plugin</artifactId>
		        <version>3.1.0</version>
		        <executions>
			        <execution>
				        <id>sign-artifacts</id>
				        <phase>verify</phase>
				        <goals>
					        <goal>sign</goal>
				        </goals>
			        </execution>
		        </executions>
	        </plugin>
	        <plugin>
		        <groupId>org.sonatype.central</groupId>
		        <artifactId>central-publishing-maven-plugin</artifactId>
		        <version>0.8.0</version>
		        <extensions>true</extensions>
		        <configuration>
			        <publishingServerId>central</publishingServerId>
			        <deploymentName>TXNet</deploymentName>
		        </configuration>
	        </plugin>
        </plugins>
    </build>
</project>